--- a/BlazorTool.Client/Pages/ActivitiesPage.razor
+++ b/BlazorTool.Client/Pages/ActivitiesPage.razor
@@ -543,8 +543,8 @@
         _allAppointments.AddRange(ConvertAppointmentsFromWorkOrders(_allOrders));
         cellStyles = RenderStatesStyle(_allOrders);
         await apiService.GetWODictionaries(UserState.PersonID, UserState.LangCode);
-        WOCategories = apiService.GetWOCategories().Select(c => c.Name).ToList();
-        WOStates = apiService.GetWOStates().Select(c => c.Name).ToList();
+        WOCategories = (await apiService.GetWOCategories()).Select(c => c.Name).ToList();
+        WOStates = (await apiService.GetWOStates()).Select(c => c.Name).ToList();
         await LoadData();
 
         Console.WriteLine($"--- HardLoadData completed. Appointments count: {Appointments.Count}");
@@ -569,8 +569,8 @@
         _allAppointments.AddRange(ConvertAppointmentsFromWorkOrders(_allOrders));
         statuses = GetStatuses(_allOrders);
         Console.WriteLine($"--- LoadData: _allAppointments loaded. Count: {_allAppointments.Count}");
-        Departments = apiService.GetWODepartments().Select(c => c.Name).Distinct().ToList();
-        DeviceCategories = apiService.GetWOCategories().Select(c => c.Name).Distinct().ToList();
+        Departments = (await apiService.GetWODepartments()).Select(c => c.Name).Distinct().ToList();
+        DeviceCategories = (await apiService.GetWOCategories()).Select(c => c.Name).Distinct().ToList();
         DeviceCategories.Insert(0, "All");
         DisplayAppointments();
         isLoading = false;
@@ -621,7 +621,7 @@
             return;
         }
         DepartmentSelectionOpen = false;
-        var listDepIDs = apiService.GetWODepartments().Where(d => selectedDepartments.Contains(d.Name)).Select(d => d.Id).ToList();
+        var listDepIDs = (await apiService.GetWODepartments()).Where(d => selectedDepartments.Contains(d.Name)).Select(d => d.Id).ToList();
         var personsInDepartments = apiService.GetUsersInfoByDepartmentIdCached(listDepIDs).Select(p => p.PersonID).ToList();
         if (selectedPersonIDs.Count == personsInDepartments.Count && selectedPersonIDs.All(id => personsInDepartments.Contains(id))) return; //no changes
         selectedPersonIDs = new(personsInDepartments);
