--- a/BlazorTool.Client/Pages/Scheduler.razor
+++ b/BlazorTool.Client/Pages/Scheduler.razor
@@ -173,9 +173,8 @@
         _allOrders = await apiService.GetWorkOrdersAsync(); //from API, not cache
         cellStyles = RenderStatesStyle(_allOrders);
         ApptService.ClearAppointments(); //clear cache
-        await apiService.GetWODictionaries(UserState.PersonID, UserState.LangCode);
-        WOCategories = apiService.GetWOCategories().Select(c => c.Name).ToList();
-        WOStates = apiService.GetWOStates().Select(c => c.Name).ToList();
+        WOCategories = (await apiService.GetWOCategories()).Select(c => c.Name).ToList();
+        WOStates = (await apiService.GetWOStates()).Select(c => c.Name).ToList();
         currentUser.PersonId = UserState.PersonID ?? -1;
         currentUser.Name = UserState.UserName ?? string.Empty;
         await LoadData();
@@ -197,12 +196,12 @@
         var index = PersonResources.FindIndex(r => r.Name == Person.NotAssigned.Name);
         if (index >0)
         PersonResources.RemoveAt(index);
-        Departments = apiService.GetWODepartments().Select(c => c.Name).Distinct().ToList();
+        Departments = (await apiService.GetWODepartments()).Select(c => c.Name).Distinct().ToList();
         Departments.Insert(0, "All");
-        DeviceCategories = apiService.GetWOCategories().Select(c => c.Name).Distinct().ToList();
+        DeviceCategories = (await apiService.GetWOCategories()).Select(c => c.Name).Distinct().ToList();
         DeviceCategories.Insert(0, "All");
         WO_AssetNo = new List<string> { "All" };
-        WO_AssetNo.AddRange(_allOrders.Where(d => !string.IsNullOrWhiteSpace(d.AssetNo)).Select(x => x.AssetNo).Distinct().ToList());
+        WO_AssetNo.AddRange(_allOrders.Where(d => !string.IsNullOrWhiteSpace(d.AssetNo ?? "")).Select(x => x.AssetNo ?? "").Distinct().ToList() ?? new());
         DisplayAppointments();
         DisplayOrders();
         isLoading = false;
